Change the name of variable

--- a/src/app/features/training-and-qualifications/missing-mandatory-training/missing-mandatory-training.component.html
+++ b/src/app/features/training-and-qualifications/missing-mandatory-training/missing-mandatory-training.component.html
@@ -15,7 +15,7 @@
       <th class="govuk-table__header" scope="col" style="width: 10%"></th>
     </tr>
   </thead>
-  <tbody class="govuk-table__body" *ngIf="gropByName">
+  <tbody class="govuk-table__body" *ngIf="groupByName">
     <ng-container>
       <tr class="govuk-table__row govuk-util__vertical-align-top" *ngFor="let worker of missingTrainingArray">
         <td class="govuk-table__cell govuk-!-font-weight-regular">
