refactor onSubmit, update tests for the add edit component, and remove alert subscription in  new t and q record component

--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -72,6 +72,7 @@
             role="button"
             draggable="false"
             [routerLink]="['../select-record-type']"
+            (click)="resetLocalStorage()"
           >
             Add a record
           </a>
