make hint text conditional in total staff component

--- a/src/app/features/workers/total-staff-change/total-staff-change.component.html
+++ b/src/app/features/workers/total-staff-change/total-staff-change.component.html
@@ -9,6 +9,7 @@
         [formErrorsMap]="formErrorsMap"
         [submitted]="submitted"
         [errorSummaryService]="errorSummaryService"
+        [showHint]="false"
       >
       </app-total-staff>
 
