--- a/src/app/features/workplace/total-staff-question/total-staff-question.component.html
+++ b/src/app/features/workplace/total-staff-question/total-staff-question.component.html
@@ -9,6 +9,7 @@
         [formErrorsMap]="formErrorsMap"
         [submitted]="submitted"
         [errorSummaryService]="errorSummaryService"
+        [showHint]="false"
       >
       </app-total-staff>
 
