--- a/src/app/features/workers/new-training-qualifications-record/new-qualifications/new-qualifications.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-qualifications/new-qualifications.component.html
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
-  <ng-container *ngIf="qualificationsByGroup.count > 0; noQualifications">
-    <h1 class="govuk-heading-l govuk-!-font-size-27">Qualification</h1>
+  <ng-container *ngIf="qualificationsByGroup.count > 0; else noQualifications">
+    <h1 class="govuk-heading-l govuk-!-font-size-27">Qualifications</h1>
     <div *ngFor="let qualificationType of qualificationsByGroup.groups">
       <table class="govuk-table">
         <caption class="govuk-table__caption govuk-table__caption--m">
@@ -41,5 +41,16 @@
       </table>
     </div>
   </ng-container>
-  <ng-template #noQualifications>No Qualifications</ng-template>
+  <ng-template #noQualifications>
+    <div class="govuk-!-margin-bottom-8">
+      <h1 class="govuk-heading-l govuk-!-font-size-27 govuk-!-margin-bottom-3">Qualifications</h1>
+      <p class="govuk-body">No qualification records have been added for this person yet.</p>
+      <a
+        class="govuk-link--no-visited-state"
+        [attr.data-testid]="'no-qualification-link'"
+        [routerLink]="['../select-record-type']"
+        >Add a qualification record</a
+      >
+    </div>
+  </ng-template>
 </div>
