--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -149,7 +149,7 @@
           </tr>
           <tr class="govuk-table__row">
             <td class="govuk-table__cell">Control and restraint</td>
-            <td class="govuk-table__cell">Mndatory</td>
+            <td class="govuk-table__cell">Mandatory</td>
             <td class="govuk-table__cell">
               <img
                 src="/assets/images/flag-red.svg"
@@ -178,7 +178,7 @@
       </table>
     </div>
   </div>
-  <div class="asc-tabs asc-tabs--border-bottom govuk-!-margin-top-5 govuk-!-margin-bottom-5">
+  <div class="asc-tabs asc-tabs--border-bottom govuk-!-margin-top-5 govuk-!-margin-bottom-7">
     <ul class="govuk-tabs__list asc-tabs__list" role="tablist">
       <li
         class="govuk-tabs__list-item asc-tabs__list-item"
@@ -240,6 +240,7 @@
       <app-new-training
         [trainingCategories]="mandatoryTraining"
         [trainingType]="'Mandatory Training'"
+        [isMandatoryTraining]="true"
         [canEditWorker]="canEditWorker"
         [setReturnRoute]="setReturnRoute"
       >
@@ -259,6 +260,7 @@
     <app-new-training
       [trainingCategories]="mandatoryTraining"
       [trainingType]="'Mandatory Training'"
+      [isMandatoryTraining]="true"
       [canEditWorker]="canEditWorker"
       [setReturnRoute]="setReturnRoute"
     >
