add function to set training category when clicking on training link in a workers t and q page

--- a/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
@@ -27,6 +27,7 @@
                   [routerLink]="['../training', records.uid]"
                   [attr.data-testid]="'Title-' + records.uid"
                   [state]="trainingType === 'mandatory' && { training: 'mandatory' }"
+                  (click)="setLocalStorage($event, records.trainingCategory.category)"
                   >{{ records.title ? records.title : 'Missing training name - Add' }}</a
                 >
               </ng-container>
