feat(newViewStaffTrainingRecord): Fixed some minor frontend alignments and added tests for new tabs

--- a/src/app/features/workers/new-training-qualifications-record/new-qualifications/new-qualifications.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-qualifications/new-qualifications.component.html
@@ -48,7 +48,7 @@
       <a
         class="govuk-link--no-visited-state"
         [attr.data-testid]="'no-qualification-link'"
-        [routerLink]="['../select-record-type']"
+        [routerLink]="['../add-qualification']"
         >Add a qualification record</a
       >
     </div>
