--- a/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
@@ -95,7 +95,7 @@
         <a
           class="govuk-link--no-visited-state"
           [attr.data-testid]="'no-training-link'"
-          [routerLink]="['../select-record-type']"
+          [routerLink]="['../add-training']"
           >Add a training record</a
         >
       </div>
