feat(newViewStaffTrainingRecord): made front-end visual deskcheck fixes

--- a/src/app/features/workers/new-training-qualifications-record/new-qualifications/new-qualifications.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-qualifications/new-qualifications.component.html
@@ -10,9 +10,9 @@
         </caption>
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header govuk-!-width-one-half">Certificate Name</th>
-            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Year achieved</th>
-            <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Notes</th>
+            <th scope="col" class="govuk-table__header" scope="col" style="width: 30%">Certificate Name</th>
+            <th scope="col" class="govuk-table__header" scope="col" style="width: 16.5%">Year achieved</th>
+            <th scope="col" class="govuk-table__header" scope="col" style="width: 53.5%">Notes</th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
@@ -46,7 +46,7 @@
       <h1 class="govuk-heading-l govuk-!-font-size-27 govuk-!-margin-bottom-3">Qualifications</h1>
       <p class="govuk-body">No qualification records have been added for this person yet.</p>
       <a
-        class="govuk-link--no-visited-state"
+        class="govuk-link--no-visited-state govuk-!-font-size-19"
         [attr.data-testid]="'no-qualification-link'"
         [routerLink]="['../add-qualification']"
         >Add a qualification record</a
