--- a/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training/new-training.component.html
@@ -13,13 +13,11 @@
         </caption>
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header govuk-!-width-one-third" scope="col" style="width: 30%">
-              Training Name
-            </th>
-            <th scope="col" class="govuk-table__header" scope="col" style="width: 17.5%">Accredited</th>
+            <th scope="col" class="govuk-table__header" scope="col" style="width: 30%">Training Name</th>
+            <th scope="col" class="govuk-table__header" scope="col" style="width: 16.5%">Accredited</th>
             <th scope="col" class="govuk-table__header" scope="col" style="width: 20%">Completion date</th>
-            <th scope="col" class="govuk-table__header" scope="col" style="width: 17.5%">Expriy date</th>
-            <th scope="col" class="govuk-table__header" scope="col" style="width: 15%">Status</th>
+            <th scope="col" class="govuk-table__header" scope="col" style="width: 16.5%">Expriy date</th>
+            <th scope="col" class="govuk-table__header" scope="col" style="width: 17%">Status</th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
@@ -79,9 +77,9 @@
     <ng-container *ngIf="isMandatoryTraining; else notMandatoryTraining">
       <div class="govuk-!-margin-bottom-8">
         <h1 class="govuk-heading-l govuk-!-font-size-27 govuk-!-margin-bottom-3">Mandatory training</h1>
-        <p class="govuk-body">No mandatory training records have been added for this person yet.</p>
+        <p class="govuk-body">No mandatory training has been added for their job role yet.</p>
         <a
-          class="govuk-link--no-visited-state"
+          class="govuk-link--no-visited-state govuk-!-font-size-19"
           [attr.data-testid]="'no-mandatory-training-link'"
           [routerLink]="['../select-record-type']"
           >Add and manage mandatory training records</a
@@ -91,9 +89,9 @@
     <ng-template #notMandatoryTraining>
       <div class="govuk-!-margin-bottom-8">
         <h1 class="govuk-heading-l govuk-!-font-size-27 govuk-!-margin-bottom-3">Non-mandatory training</h1>
-        <p class="govuk-body">No non-mandatory training records have been added for this person yet.</p>
+        <p class="govuk-body">No non-mandatory training has been added for their job role yet</p>
         <a
-          class="govuk-link--no-visited-state"
+          class="govuk-link--no-visited-state govuk-!-font-size-19"
           [attr.data-testid]="'no-training-link'"
           [routerLink]="['../add-training']"
           >Add a training record</a
