--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -148,8 +148,7 @@
 
       <div *ngIf="missingJobRoleMandatoryTrainingCount > 0">
         <app-missing-mandatory-training
-          [missingRecord]="missingMandatoryTraining"
-          [training]="worker"
+          [missingMandatoryTraining]="missingMandatoryTraining"
           [canEditWorker]="canEditWorker"
         ></app-missing-mandatory-training>
       </div>
