--- a/src/app/shared/directives/add-edit-training/add-edit-training.component.html
+++ b/src/app/shared/directives/add-edit-training/add-edit-training.component.html
@@ -38,7 +38,7 @@
         <ng-template #noDropdown>
           <p class="govuk-body govuk-!-margin-bottom-6" data-testid="trainingCategoryDisplay">
             <span class="govuk-util__block"><b>Training category</b></span>
-            <span class="govuk-util__block govuk-!-margin-top-2">{{ trainingCategory }}</span>
+            <span class="govuk-util__block govuk-!-margin-top-2">{{ trainingCategory.category }}</span>
           </p>
         </ng-template>
 
