feat(newViewStaffTrainingRecord): Made a small refactor of new-training-and-quals component file

--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -88,7 +88,7 @@
     <div class="govuk-grid-column-full">
       <app-new-training-and-qualifications-record-summary
         [trainingCount]="mandatoryTrainingCount + nonMandatoryTrainingCount"
-        [qualificationsCount]="qualificationsCount"
+        [qualificationsCount]="qualificationsByGroup.count"
       ></app-new-training-and-qualifications-record-summary>
     </div>
   </div>
