--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -21,7 +21,7 @@
     </div>
   </div>
 </div>
-<app-table-pagination-wrapper [workerCount]="workerCount">
+<app-table-pagination-wrapper [workerCount]="workerCount" (fetchWorkers)="getPageOfWorkers2($event)">
   <table *ngIf="workerCount; else noWorkersFound" class="govuk-table">
     <thead class="govuk-table__head">
       <tr class="govuk-table__row">
