--- a/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
+++ b/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="govuk-grid-row govuk-util__vertical-align-center">
+<div class="govuk-grid-row govuk-util__vertical-align-center">
   <div *ngIf="totalWorkerCount > itemsPerPage" class="govuk-grid-column-three-quarters">
     <app-search-input
       ref="trainingRecordSearch"
@@ -6,9 +6,9 @@
       [prevSearch]="searchTerm"
       (emitInput)="handleSearch($event)"
     ></app-search-input>
-  </div> -->
+  </div>
 
-<!-- <div
+  <!-- <div
     class="govuk-grid-column-one-quarter govuk-!-margin-bottom-0 govuk-!-padding-top-2 govuk-!-padding-bottom-2 govuk-util__float-right"
   >
     <div class="govuk-form-group">
@@ -20,11 +20,13 @@
       </select>
     </div>
   </div> -->
-<!-- </div> -->
-<ng-content></ng-content>
-<app-pagination
-  [itemsPerPage]="itemsPerPage"
-  [totalNoOfItems]="workerCount"
-  (currentPageIndexChange)="handlePageUpdate($event)"
-  [currentPageIndex]="currentPageIndex"
-></app-pagination>
+</div>
+<div>
+  <ng-content></ng-content>
+  <app-pagination
+    [itemsPerPage]="itemsPerPage"
+    [totalNoOfItems]="workerCount"
+    (currentPageIndexChange)="handlePageUpdate($event)"
+    [currentPageIndex]="currentPageIndex"
+  ></app-pagination>
+</div>
