add sort by functionality for the table pagination component and implement in staff summary component

--- a/src/app/shared/components/staff-summary/staff-summary.component.html
+++ b/src/app/shared/components/staff-summary/staff-summary.component.html
@@ -24,6 +24,9 @@
 <app-table-pagination-wrapper
   [totalWorkerCount]="totalWorkerCount"
   [workerCount]="workerCount"
+  [sortByParamMap]="sortByParamMap"
+  [sortByValue]="sortByValue"
+  [sortOptions]="sortStaffOptions"
   (fetchWorkers)="getPageOfWorkers2($event)"
 >
   <table *ngIf="workerCount; else noWorkersFound" class="govuk-table">
