--- a/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
+++ b/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
@@ -8,18 +8,18 @@
     ></app-search-input>
   </div>
 
-  <!-- <div
+  <div
     class="govuk-grid-column-one-quarter govuk-!-margin-bottom-0 govuk-!-padding-top-2 govuk-!-padding-bottom-2 govuk-util__float-right"
   >
     <div class="govuk-form-group">
       <label class="govuk-label" for="sortByStaff"> Sort by </label>
       <select class="govuk-select" id="sortByStaff" name="sortByStaff" (change)="sortBy($event.target.value)">
-        <option *ngFor="let sortStaffOption of sortStaffOptions | keyvalue" value="{{ sortStaffOption.key }}">
-          {{ sortStaffOption.value }}
+        <option *ngFor="let option of sortOptions | keyvalue" value="{{ option.key }}">
+          {{ option.value }}
         </option>
       </select>
     </div>
-  </div> -->
+  </div>
 </div>
 <div>
   <ng-content></ng-content>
