--- a/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
+++ b/src/app/shared/components/table-pagination-wrapper/table-pagination-wrapper.component.html
@@ -1,5 +1,5 @@
 <div class="govuk-grid-row govuk-util__vertical-align-center">
-  <div *ngIf="totalWorkerCount > itemsPerPage" class="govuk-grid-column-three-quarters">
+  <div *ngIf="totalWorkerCount > itemsPerPage" class="govuk-grid-column-three-quarters" data-testid="search">
     <app-search-input
       ref="trainingRecordSearch"
       accessibleLabel="for staff records"
