--- a/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
+++ b/src/app/shared/components/training-and-qualifications-tab/training-and-qualifications-tab.component.html
@@ -44,7 +44,7 @@
   </ng-container>
 
   <ng-container *ngIf="viewTrainingByCategory && trainingCategories?.length == 0">
-    You need to click on a name or ID number under 'Staff' to add a training <br />or qualification record.
+    <p>You need to click on a name or ID number under 'Staff' to add a training <br />or qualification record.</p>
   </ng-container>
 </ng-container>
 <ng-template #noStaffRecords>
