--- a/src/app/shared/components/training-link-panel/training-link-panel.component.html
+++ b/src/app/shared/components/training-link-panel/training-link-panel.component.html
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <div class="govuk-!-margin-bottom-7">
+    <div>
       <h2 class="govuk-heading-m govuk-!-margin-bottom-0">Training and qualifications ({{ totalRecords || 0 }})</h2>
       <p *ngIf="tAndQsLastUpdated" class="govuk-!-font-size-16 govuk-!-margin-top-2">
         Last update, {{ tAndQsLastUpdated | date: 'd MMMM yyyy' }}
